src/objects/TechnicalQualityReview__c.object
<CustomObject>
    <fields>
        <fullName>ApproverRequiredDate__c</fullName>
        <label>Approver Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DelegateProject__c</fullName>
        <formula>Deliverable__r.Project__c</formula>
        <label>Delegate Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliverableName__c</fullName>
        <formula>Deliverable__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverable Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliverableOwner__c</fullName>
        <formula>Deliverable__r.DeliverableOwner__r.FirstName&amp;&quot; &quot;&amp; Deliverable__r.DeliverableOwner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverable Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliverableRevision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliverable Version</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>DeliverableRevision__c.Deliverable__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Deliverable__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DeliverableRevision__c</referenceTo>
        <relationshipLabel>Technical Quality Reviews</relationshipLabel>
        <relationshipName>TechnicalQualityReviewsRevision</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliverableType__c</fullName>
        <formula>&quot;Test&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverable Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliverable__c</fullName>
        <label>Deliverable</label>
        <referenceTo>Deliverable__c</referenceTo>
        <relationshipName>TechnicalQualityReviewsDeliverable</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IndependentReviewerDate__c</fullName>
        <label>Independent Reviewer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IndependentReviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Independent Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadVerifierRequiredDate__c</fullName>
        <label>Lead Verifier Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadVerifier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Verifier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lock_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Internal Purpose to lock fields on visualforce page</description>
        <label>Lock Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginatorRequiredDate__c</fullName>
        <label>Originator Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReviewScopeComments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReviewTypeComments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReviewerRequiredDate__c</fullName>
        <label>Reviewer Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeAdequacyofStatements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adequacy of Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeBasisandValidity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basis and Validity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeClientandThirdPartyInformation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client and Third Party Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeComplianceWithScope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scope Compliance With Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeConformancewithStandards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scope Conformance with Standards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeDetailCalcCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detail Calc Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeGrammerElements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grammer Elements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeOrgClarityCompleteness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Org Clarity Completeness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeOther__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scope Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeSoundnessofApproach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scope Soundness of Approach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeBidabilityReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bidability Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeCalculationCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeConstructabilityReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Constructability Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeDesignAssumptions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Assumptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeDesignReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeDetailCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detail Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeIndependentReviewIR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Independent Review IR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeInterdisciplinaryCoordinationReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interdisciplinary Coordination Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeOther__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Type Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeSpecificationPackageReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specification Package Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeSubconsultantClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subconsultant Client</label>
        <type>Checkbox</type>
    </fields>
    <label>Technical Quality Review</label>
    <nameField>
        <displayFormat>TQR-{0}</displayFormat>
        <label>Technical Quality Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Quality Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>